@@ -5,6 +5,11 @@
 NOTE: More information on important changes for bogofilter updaters
 is in the RELEASE.NOTES files.  Read them!!
 
+	2004-10-10
+
+	* OS/2 compatibility fixes for configure, bogofilter, and
+          bogoutil (thanks to Yuri Dario).
+
 	2004-10-09
 
 	* Fix a potential crash on malformatted input (writing a NUL byte to
